--- a/vfs/vfs.vcxproj.filters
+++ b/vfs/vfs.vcxproj.filters
@@ -40,6 +40,18 @@
     <Filter Include="Исходные файлы\fs">
       <UniqueIdentifier>{e2c36ed9-e940-470a-8e49-b1af388ebfc8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Файлы заголовков\repository">
+      <UniqueIdentifier>{952c70ae-77ac-4b78-b03b-9c63d06065d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\repository">
+      <UniqueIdentifier>{c8d56e65-30a8-4b93-9e82-25b78e03a6c7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\service">
+      <UniqueIdentifier>{a0567c54-7052-49ea-b3dc-bc21a453062c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы заголовков\service">
+      <UniqueIdentifier>{eb2849cf-043a-439f-b8e3-7b1a9652bf1f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tools.cpp">
@@ -75,11 +87,29 @@
     <ClCompile Include="directory.cpp">
       <Filter>Исходные файлы\io</Filter>
     </ClCompile>
-    <ClCompile Include="file_explorer.cpp">
-      <Filter>Исходные файлы\io</Filter>
-    </ClCompile>
     <ClCompile Include="file_system.cpp">
       <Filter>Исходные файлы\fs</Filter>
+    </ClCompile>
+    <ClCompile Include="block_repository.cpp">
+      <Filter>Исходные файлы\repository</Filter>
+    </ClCompile>
+    <ClCompile Include="inode_repository.cpp">
+      <Filter>Исходные файлы\repository</Filter>
+    </ClCompile>
+    <ClCompile Include="repository.cpp">
+      <Filter>Исходные файлы\repository</Filter>
+    </ClCompile>
+    <ClCompile Include="storage.cpp">
+      <Filter>Исходные файлы\repository</Filter>
+    </ClCompile>
+    <ClCompile Include="directory_service.cpp">
+      <Filter>Исходные файлы\service</Filter>
+    </ClCompile>
+    <ClCompile Include="file_service.cpp">
+      <Filter>Исходные файлы\service</Filter>
+    </ClCompile>
+    <ClCompile Include="service.cpp">
+      <Filter>Исходные файлы\service</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -119,11 +149,29 @@
     <ClInclude Include="file.h">
       <Filter>Файлы заголовков\io</Filter>
     </ClInclude>
-    <ClInclude Include="file_explorer.h">
-      <Filter>Файлы заголовков\io</Filter>
-    </ClInclude>
     <ClInclude Include="file_system.h">
       <Filter>Файлы заголовков\fs</Filter>
+    </ClInclude>
+    <ClInclude Include="repository.h">
+      <Filter>Файлы заголовков\repository</Filter>
+    </ClInclude>
+    <ClInclude Include="inode_repository.h">
+      <Filter>Файлы заголовков\repository</Filter>
+    </ClInclude>
+    <ClInclude Include="block_repository.h">
+      <Filter>Файлы заголовков\repository</Filter>
+    </ClInclude>
+    <ClInclude Include="storage.h">
+      <Filter>Файлы заголовков\repository</Filter>
+    </ClInclude>
+    <ClInclude Include="directory_service.h">
+      <Filter>Файлы заголовков\service</Filter>
+    </ClInclude>
+    <ClInclude Include="file_service.h">
+      <Filter>Файлы заголовков\service</Filter>
+    </ClInclude>
+    <ClInclude Include="service.h">
+      <Filter>Файлы заголовков\service</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
