--- a/vfs/vfs.vcxproj
+++ b/vfs/vfs.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="inode.cpp" />
     <ClCompile Include="imap.cpp" />
     <ClCompile Include="inode_service.cpp" />
+    <ClCompile Include="path.cpp" />
     <ClCompile Include="service.cpp" />
     <ClCompile Include="storage.cpp" />
     <ClCompile Include="superblock.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="imap.h" />
     <ClInclude Include="inode_service.h" />
     <ClInclude Include="list_head.h" />
+    <ClInclude Include="path.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="service.h" />
     <ClInclude Include="storage.h" />
