--- a/vfs/vfs.vcxproj
+++ b/vfs/vfs.vcxproj
@@ -171,6 +171,9 @@
     <ClInclude Include="terminal.h" />
     <ClInclude Include="tools.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".todo" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
