--- a/vfs/vfs.vcxproj.filters
+++ b/vfs/vfs.vcxproj.filters
@@ -198,4 +198,7 @@
       <Filter>Файлы заголовков\service\models</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".todo" />
+  </ItemGroup>
 </Project>
