Перемещение между каталогами работает корректно

--- a/vfs/vfs.vcxproj
+++ b/vfs/vfs.vcxproj
@@ -176,6 +176,9 @@
     <ClInclude Include="user.h" />
     <ClInclude Include="user_service.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
