--- a/vfs/vfs.vcxproj.filters
+++ b/vfs/vfs.vcxproj.filters
@@ -213,4 +213,7 @@
       <Filter>Файлы заголовков\service\services</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
