--- a/vfs/vfs.vcxproj
+++ b/vfs/vfs.vcxproj
@@ -127,21 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="base_service.cpp" />
     <ClCompile Include="block.cpp" />
-    <ClCompile Include="block_service.cpp" />
     <ClCompile Include="dentry.cpp" />
+    <ClCompile Include="dentry_factory.cpp" />
     <ClCompile Include="directory.cpp" />
-    <ClCompile Include="directory_service.cpp" />
     <ClCompile Include="fat.cpp" />
     <ClCompile Include="file.cpp" />
-    <ClCompile Include="file_service.cpp" />
     <ClCompile Include="file_system.cpp" />
     <ClCompile Include="inode.cpp" />
     <ClCompile Include="imap.cpp" />
-    <ClCompile Include="inode_service.cpp" />
     <ClCompile Include="path.cpp" />
-    <ClCompile Include="service.cpp" />
     <ClCompile Include="sha256.cpp" />
     <ClCompile Include="storage.cpp" />
     <ClCompile Include="superblock.cpp" />
@@ -149,32 +144,25 @@
     <ClCompile Include="terminal.cpp" />
     <ClCompile Include="tools.cpp" />
     <ClCompile Include="user.cpp" />
-    <ClCompile Include="user_service.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="base_service.h" />
     <ClInclude Include="block.h" />
-    <ClInclude Include="block_service.h" />
     <ClInclude Include="dentry.h" />
+    <ClInclude Include="dentry_factory.h" />
     <ClInclude Include="directory.h" />
-    <ClInclude Include="directory_service.h" />
     <ClInclude Include="fat.h" />
     <ClInclude Include="file.h" />
-    <ClInclude Include="file_service.h" />
     <ClInclude Include="file_system.h" />
     <ClInclude Include="inode.h" />
     <ClInclude Include="imap.h" />
-    <ClInclude Include="inode_service.h" />
     <ClInclude Include="path.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="service.h" />
     <ClInclude Include="sha256.h" />
     <ClInclude Include="storage.h" />
     <ClInclude Include="superblock.h" />
     <ClInclude Include="terminal.h" />
     <ClInclude Include="tools.h" />
     <ClInclude Include="user.h" />
-    <ClInclude Include="user_service.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
