--- a/vfs/vfs.vcxproj
+++ b/vfs/vfs.vcxproj
@@ -130,15 +130,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bitmap_storage.cpp" />
     <ClCompile Include="block.cpp" />
+    <ClCompile Include="block_storage.cpp" />
     <ClCompile Include="dentry.cpp" />
     <ClCompile Include="dentry_factory.cpp" />
     <ClCompile Include="directory.cpp" />
     <ClCompile Include="fat.cpp" />
+    <ClCompile Include="fat_storage.cpp" />
     <ClCompile Include="file.cpp" />
     <ClCompile Include="file_system.cpp" />
     <ClCompile Include="inode.cpp" />
     <ClCompile Include="imap.cpp" />
+    <ClCompile Include="inode_storage.cpp" />
     <ClCompile Include="path.cpp" />
     <ClCompile Include="sha256.cpp" />
     <ClCompile Include="storage.cpp" />
@@ -149,15 +153,19 @@
     <ClCompile Include="user.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bitmap_storage.h" />
     <ClInclude Include="block.h" />
+    <ClInclude Include="block_storage.h" />
     <ClInclude Include="dentry.h" />
     <ClInclude Include="dentry_factory.h" />
     <ClInclude Include="directory.h" />
     <ClInclude Include="fat.h" />
+    <ClInclude Include="fat_storage.h" />
     <ClInclude Include="file.h" />
     <ClInclude Include="file_system.h" />
     <ClInclude Include="inode.h" />
     <ClInclude Include="imap.h" />
+    <ClInclude Include="inode_storage.h" />
     <ClInclude Include="path.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="sha256.h" />
